Do not count the size of items from the old session.

BUG: 143874

svn path=/trunk/extragear/multimedia/k3b/; revision=652574